--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ entrypoints==0.4
 executing==1.1.0
 fastjsonschema==2.16.2
 fonttools==4.37.4
+imbalanced-learn==0.9.1
+imblearn==0.0
 ipykernel==6.16.0
 ipython==8.5.0
 jedi==0.18.1
